<resources>
    <string name="app_name">AluraViagens</string>
    <string name="TODO">TODO</string>
    <string name="str_especiais">Especiais</string>
    <string name="str_brasil">Brasil</string>
    <string name="todo">TODO</string>
    <string name="str_realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="str_preco_final">Preço final:</string>
    <string name="str_name_cart">Nome no cartão</string>
    <string name="str_finalizar_compra">FINALIZAR COMPRA</string>
    <string name="str_msg_pagamento">Digite as informações do cartão de crédito que você deseja usar para realizar o pagamento</string>
    <string name="str_valor_da_compra">Valor da compra:</string>
    <string name="str_numero_cartao">Número do cartão</string>
    <string name="str_aa">AA</string>
    <string name="str_mm">MM</string>
    <string name="str_cvv">CVV</string>
    <string name="str_example_data">Dado aqui</string>
    <string name="str_resumo_compra">Confira o resumo da compra:</string>
    <string name="str_compra_realizada">Compra realizada com sucesso. :)</string>
    <string name="str_parabens">Parabéns!</string>
</resources>
